fixed card icons being too small

--- a/src/app/css/card.module.css
+++ b/src/app/css/card.module.css
@@ -82,14 +82,12 @@
 
 .iconImage {
   position: relative;
-  height: 100%;
-  width: 100%;
 }
 
 .icon h4 {
   margin: 0;
   text-align: center;
-  font-size: 1rem;
+  font-size: 1.05rem;
 }
 
 .alertCircle {
